--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.5.0",
     "env": "^0.0.2",
     "express": "^4.18.2",
-    "mongoose": "^8.14.3"
+    "mongoose": "^8.14.3",
+    "thinkboard-project": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
